force-app/main/default/objects/ESS_Config__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Application_Running_No__c</fullName>
        <inlineHelpText>ETI-YYYY-MM-XXXX</inlineHelpText>
        <label>Application Running No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FixAndGeneral_Running_No__c</fullName>
        <label>FixAndGeneral_Running_No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HotelBooking_Running_No__c</fullName>
        <label>HotelBooking Running No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_LR1_Running_No__c</fullName>
        <inlineHelpText>จดหมายรับรองเงินเดือน (สำหรับทำธุรกรรมทางการเงิน)</inlineHelpText>
        <label>Letter LR1 Running No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_LR2_Running_No__c</fullName>
        <inlineHelpText>จดหมายรับรองเงินเดือน แบบระบุวันเวลา (สำหรับยื่นขอ Visa)</inlineHelpText>
        <label>Letter LR2 Running No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_LR3_Running_No__c</fullName>
        <inlineHelpText>จดหมายรับรองเงินเดือน แบบไม่ระบุวันเวลา (สำหรับยื่นขอ Visa)</inlineHelpText>
        <label>Letter LR3 Running No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manpower_Running_No__c</fullName>
        <inlineHelpText>MSR-YYYY-MM-XX</inlineHelpText>
        <label>Manpower Running No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MonthlyPassword__c</fullName>
        <label>MonthlyPassword</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MonthlyPath__c</fullName>
        <label>MonthlyPath</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MonthlyUrl__c</fullName>
        <label>MonthlyUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MonthlyUsername__c</fullName>
        <label>MonthlyUsername</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probationary_Running_No__c</fullName>
        <label>Probationary Running No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retirement_Running_No__c</fullName>
        <label>Retirement Running No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SharePointPassword__c</fullName>
        <label>SharePointPassword</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SharePointTokenPath__c</fullName>
        <label>SharePointTokenPath</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SharePointUploadPath__c</fullName>
        <label>SharePointUploadPath</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SharePointUrl__c</fullName>
        <label>SharePointUrl</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SharePointUsername__c</fullName>
        <label>SharePointUsername</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stationary_Running_No__c</fullName>
        <label>Stationary Running No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>ESS Config</label>
</CustomObject>